@@ -1,5 +1,5 @@
 #
-#      Copyright (C) 2012 Tommy Winther
+#      Copyright (C) 2013 Tommy Winther
 #      http://tommy.winther.nu
 #
 #  This Program is free software; you can redistribute it and/or modify
@@ -21,6 +21,7 @@ import sys
 import os
 import urlparse
 import urllib2
+import platform
 
 import xbmcaddon
 import xbmcgui
@@ -28,17 +29,20 @@ import xbmcplugin
 
 import buggalo
 
-from channels import CHANNELS, CATEGORIES, QUALITIES
+from channels import CHANNELS, CATEGORIES, QUALITIES, CATEGORY_DR, Q_BEST, Q_RASPBERRY_PI
 
 TITLE_OFFSET = 31000
 
 
 class DanishLiveTV(object):
     def showChannels(self, category=None):
-        try:
-            quality = QUALITIES[int(ADDON.getSetting('quality'))]
-        except ValueError:
-            quality = QUALITIES[0]  # fallback for old settings value
+        if ADDON.getSetting('raspberry.pi.compatible.streams') == 'true':
+            quality = Q_RASPBERRY_PI
+        else:
+            try:
+                quality = QUALITIES[int(ADDON.getSetting('quality'))]
+            except ValueError:
+                quality = QUALITIES[Q_BEST]  # fallback for old settings value
 
         if category is not None:
             channels = CATEGORIES[category]
@@ -46,27 +50,27 @@ class DanishLiveTV(object):
             channels = CHANNELS
 
         for channel in channels:
-            icon = os.path.join(ADDON.getAddonInfo('path'), 'resources', 'logos', '%d.png' % channel.get_id())
+            icon = os.path.join(ADDON.getAddonInfo('path'), 'resources', 'logos', '%d.png' % channel.category_id)
             if not os.path.exists(icon):
                 icon = ICON
 
             idx = None
-            if channel.get_config_key():
+            if channel.config_key:
                 try:
-                    idx = int(ADDON.getSetting(channel.get_config_key()))
+                    idx = int(ADDON.getSetting(channel.config_key))
                 except ValueError:
                     idx = 0  # fallback for missing settings
 
             if channel.get_url(quality, idx):
-                title = ADDON.getLocalizedString(TITLE_OFFSET + channel.get_id())
+                title = ADDON.getLocalizedString(TITLE_OFFSET + channel.category_id)
                 item = xbmcgui.ListItem(title, iconImage=icon, thumbnailImage=icon)
                 item.setInfo('video', infoLabels={
                     'title': title,
-                    'studio': ADDON.getLocalizedString(channel.get_category())
+                    'studio': ADDON.getLocalizedString(channel.category)
                 })
                 item.setProperty('Fanart_Image', FANART)
                 item.setProperty('IsPlayable', 'true')
-                xbmcplugin.addDirectoryItem(HANDLE, PATH + '?playChannel=%d' % channel.id, item)
+                xbmcplugin.addDirectoryItem(HANDLE, PATH + '?playChannel=%d' % channel.category_id, item)
 
         xbmcplugin.endOfDirectory(HANDLE)
 
@@ -81,27 +85,30 @@ class DanishLiveTV(object):
         xbmcplugin.endOfDirectory(HANDLE)
 
     def playChannel(self, id):
-        try:
-            quality = QUALITIES[int(ADDON.getSetting('quality'))]
-        except ValueError:
-            quality = QUALITIES[0]  # fallback for old settings value
+        if ADDON.getSetting('raspberry.pi.compatible.streams') == 'true':
+            quality = Q_RASPBERRY_PI
+        else:
+            try:
+                quality = QUALITIES[int(ADDON.getSetting('quality'))]
+            except ValueError:
+                quality = QUALITIES[Q_BEST]  # fallback for old settings value
 
         for channel in CHANNELS:
-            if str(channel.get_id()) == id:
+            if str(channel.category_id) == id:
                 idx = None
-                if channel.get_config_key():
+                if channel.config_key:
                     try:
-                        idx = int(ADDON.getSetting(channel.get_config_key()))
+                        idx = int(ADDON.getSetting(channel.config_key))
                     except ValueError:
-                        idx = 0 # fallback for missing settings
+                        idx = 0  # fallback for missing settings
 
                 url = channel.get_url(quality, idx)
                 if url:
-                    icon = os.path.join(ADDON.getAddonInfo('path'), 'resources', 'logos', '%d.png' % channel.get_id())
+                    icon = os.path.join(ADDON.getAddonInfo('path'), 'resources', 'logos', '%d.png' % channel.category_id)
                     if not os.path.exists(icon):
                         icon = ICON
 
-                    title = ADDON.getLocalizedString(TITLE_OFFSET + channel.get_id())
+                    title = ADDON.getLocalizedString(TITLE_OFFSET + channel.category_id)
                     item = xbmcgui.ListItem(title, iconImage=icon, thumbnailImage=icon, path=url)
                     item.setProperty('Fanart_Image', FANART)
                     item.setProperty('IsLive', 'true')
@@ -132,9 +139,17 @@ class DanishLiveTV(object):
             if xbmcgui.Dialog().yesno(heading, line1, line2, line3, nolabel, yeslabel):
                 ADDON.setSetting('warn.if.not.in.denmark', 'false')
 
+    def isRaspberryPi(self):
+        # inspired by plugin.image.xzen
+        try:
+            uname = platform.uname()
+        except:
+            uname = os.uname()
+
+        return 'raspbmc' in uname or 'armv6l' in uname
 
 if __name__ == '__main__':
-    ADDON = xbmcaddon.Addon(id='plugin.video.dr.dk.live')
+    ADDON = xbmcaddon.Addon()
     PATH = sys.argv[0]
     HANDLE = int(sys.argv[1])
     PARAMS = urlparse.parse_qs(sys.argv[2][1:])
@@ -145,11 +160,15 @@ if __name__ == '__main__':
     buggalo.SUBMIT_URL = 'http://tommy.winther.nu/exception/submit.php'
     try:
         danishTV = DanishLiveTV()
+        if ADDON.getSetting('raspberry.pi.compatible.streams') == '':
+            # set default value based on what we are able to detect
+            ADDON.setSetting('raspberry.pi.compatible.streams', danishTV.isRaspberryPi().__str__().lower())
+
         if 'playChannel' in PARAMS:
             danishTV.playChannel(PARAMS['playChannel'][0])
         elif 'category' in PARAMS:
             danishTV.showChannels(int(PARAMS['category'][0]))
-        elif ADDON.getSetting('group.by.category') == 'true':
+        elif ADDON.getSetting('group.by.category') == 'true' and ADDON.getSetting('raspberry.pi.compatible.streams') == 'false':
             danishTV.imInDenmark()
             danishTV.showCategories()
         else:
