@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
-	id="plugin.video.dr.dk.live" version="3.0.1" name="Danish Live TV" provider-name="twinther [tommy@winther.nu]">
+	id="plugin.video.dr.dk.live" version="3.0.2" name="Danish Live TV" provider-name="twinther">
 	<requires>
 		<import addon="xbmc.python" version="2.1.0"/>
-        <import addon="script.module.buggalo" version="1.1.2"/>
+        <import addon="script.module.buggalo" version="1.1.5"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
 		<provides>video</provides>
@@ -18,5 +18,8 @@
 		<license>GPL 2.0</license>
 		<platform>all</platform>        
 		<language>da</language>
+        <email>tommy@winther.nu</email>
+        <website>http://tommy.winther.nu</website>
+        <source>https://github.com/xbmc-danish-addons/plugin.video.dr.dk.live</source>
 	</extension>
 </addon>
