@@ -10,11 +10,12 @@
     <string id="30107">Sekundær stream</string>
     <string id="30108">Warnings</string>
     <string id="30109">Warn when not in Denmark</string>
+    <string id="30110">Only show Raspberry Pi compatible streams</string>
 
-    <string id="30110">Best (up to 2 mbit/s)</string>
-    <string id="30111">High (1 mbit/s)</string>
-    <string id="30112">Medium (500 kbit/s)</string>
-    <string id="30113">Low (250 kibt/s)</string>
+    <string id="30150">Best (up to 2 mbit/s)</string>
+    <string id="30151">High (1 mbit/s)</string>
+    <string id="30152">Medium (500 kbit/s)</string>
+    <string id="30153">Low (250 kibt/s)</string>
 
     <string id="30201">Danish Broadcasting Corporation</string>
     <string id="30202">TV2/Regions</string>
