@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <settings>
 	<category label="30100">
-		<setting id="quality" label="30101" type="enum" default="0" lvalues="30110|30111|30112|30113" />
-        <setting id="group.by.category" label="30102" type="bool" default="false" />
+        <setting id="raspberry.pi.compatible.streams" label="30110" type="bool" />
+        <setting id="quality" label="30101" type="enum" default="0" lvalues="30150|30151|30152|30153" visible="eq(-1,false)" />
+        <setting id="group.by.category" label="30102" type="bool" default="false" visible="eq(-2,false)" />
 	</category>
     <category label="30103">
         <setting type="lsep" label="30104" />
